--- a/components/Carousel.css
+++ b/components/Carousel.css
@@ -6,4 +6,11 @@
     margin: 0 !important;
     overflow: hidden !important; 
   }
+  .carousel .control-arrow:hover {
+    background-color: transparent !important;
+    transform: scale(1.5) !important;
+
+  }
+ 
+
   
