--- a/app/globals.css
+++ b/app/globals.css
@@ -77,3 +77,19 @@
   font-weight: 700;
   font-style: normal;
 }
+
+  .carousel-container .thumbs-wrapper {
+    display: none !important; 
+    height: 0 !important;
+    padding: 0 !important; 
+    margin: 0 !important;
+    overflow: hidden !important; 
+  }
+  .carousel .control-arrow:hover {
+    background-color: transparent !important;
+    transform: scale(1.5) !important;
+
+  }
+ 
+
+  
